# viola-jones

./: .gitignore  Cargo.toml  LICENSE  README.md  makefile
data/: ._background.xvbwQy  README.md
src/: bin.rs  features.rs  lib.rs  preprocess.rs  strong_classifier.rs  util.rs  weak_classifier.rs
