[package]
name = "viola-jones"
version = "0.1.0"
authors = ["Michael Noronha <michaeltnoronha@gmail.com>"]
edition = "2018"

[dependencies]
image = "0.21.0"
imageproc = "0.18.0"
ndarray = "0.12.1"
indicatif = "0.11.0"
serde = { version = "1.0.87", features = ["derive"] }
serde_json = "1.0.38"
bincode = "1.1.1"

[lib]
name = "viola_jones"
path = "src/lib.rs"

[[bin]]
name = "detector"
path = "src/bin.rs"
